@@ -11,6 +11,8 @@ Change log for hexer, the multi-view binary editor
 	- handle short reads/writes and read/write errors
 	- bump the year on my copyright notice
 	- fix a signed/unsigned char bug when reading the swapfile
+	- merge early when marking screen lines for refreshing
+	  (reported by Jonathan Neuschäfer <j.neuschaefer@gmx.net>)
 
 0.1.8	2014/09/11
 	- fix a crash when inserting or replacing a half-byte
